# llm_engineering

./: README.md  pyproject.toml
3-llm-chat-app/: app.py
4-ui-llm-chat-app/: app.py
5-conversational-ai/: app.py
6-airline-ai-assistant/: app.py
brochure-generator/: app.py
website-scrapper/: app.py
